vlib/v/checker/tests/wrong_struct_declare2_err.vv
struct Foo {
}

struct Bar {
        module foos []Foo
}
